finish all bios but joe

--- a/Player-Bios/Alejandro.html
+++ b/Player-Bios/Alejandro.html
@@ -288,6 +288,36 @@
           />
         </picture>
       </article>
+      <article class="grid grid--1x2 feature movedown">
+        <div class="feature__content">
+          <h3 class="feature__heading">Chicago Invitational</h3>
+          <div>
+            <p>
+              Alejandro arrived at the tournament after undergoing rigorous
+              training in Chicago alongside Michael. Despite being the
+              tournament favorite, Alejandro faced a tough challenge in his
+              first match from Ben, resulting in a thrilling penalty shootout
+              where he ultimately emerged victorious with a score of 4-3. In the
+              finals, Alejandro showcased his skills once again by defeating
+              Michael with a score of 2-1, securing his second trophy and
+              solidifying his status as a dominant force in the league.
+            </p>
+          </div>
+
+          <button class="button2 scale__button">
+            <a class="links" href="../Tournaments/Tournaments-folder/CHINV.html"
+              >Learn More →</a
+            >
+          </button>
+        </div>
+        <picture>
+          <img
+            class="feature__image"
+            src="Player-Bio-Photos/alej-chi.jpeg"
+            alt="Ale-winning-worlc cup"
+          />
+        </picture>
+      </article>
     </section>
     <section class="block container">
       <header class="block__header">
