--- a/Player-Bios/Michael.html
+++ b/Player-Bios/Michael.html
@@ -250,6 +250,36 @@
           />
         </picture>
       </article>
+      <article class="grid grid--1x2 feature movedown">
+        <div class="feature__content">
+          <h3 class="feature__heading">Chicago Invitational</h3>
+          <div>
+            <p>
+              Michael entered the tournament following an offseason of intense
+              workouts, displaying his enhanced skills on the field. In a swift
+              and commanding fashion, he defeated newcomer Charlie with a
+              convincing 2-0 victory. Seeking redemption, Michael engaged in a
+              heated match against Joe, who received two penalties and two red
+              cards during the intense gameplay. Despite the challenges, Michael
+              emerged triumphant with a close 3-2 scoreline. However, in the
+              finals, he experienced a heartbreaking loss with a score of 2-1
+              against Ale, ending his tournament journey on a bittersweet note.
+            </p>
+          </div>
+          <button class="button2 scale__button">
+            <a class="links" href="../Tournaments/Tournaments-folder/CHINV.html"
+              >Learn More →</a
+            >
+          </button>
+        </div>
+        <picture>
+          <img
+            class="feature__image"
+            src="Player-Bio-Photos/michaelChi.jpeg"
+            alt="Ale-winning-worlc cup"
+          />
+        </picture>
+      </article>
     </section>
     <section class="block container">
       <header class="block__header">
