--- a/Player-Bios/player-bios-index.html
+++ b/Player-Bios/player-bios-index.html
@@ -104,7 +104,7 @@
           </h3>
           <p>Tournament Director</p>
           <p>New League Member</p>
-          <p>INSERT SOMETHING</p>
+          <p>This is not a Smash Bros Reference</p>
         </div>
         <picture>
           <img class="feature__image" src="" alt="John Image" />
@@ -115,9 +115,9 @@
           <h3 class="feature__heading">
             <a class="Name" href="Charlie.html">Charlie</a>
           </h3>
-          <p>Insert something</p>
           <p>New League Member</p>
           <p>Lost 15 Followers after posting about the league</p>
+          <p>Tequila Touchdown Enthusiast</p>
         </div>
         <picture>
           <img class="feature__image" src="" alt="Charlie Photo" />
