--- a/Player-Bios/John.html
+++ b/Player-Bios/John.html
@@ -16,6 +16,104 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Tournaments</title>
   </head>
+  <style>
+    .bio-header {
+      font-size: 9rem;
+    }
+
+    .crests:last-child {
+      margin-right: 0;
+    }
+
+    .centered-container {
+      /*this is for songs*/
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 0px;
+    }
+    .GOTW__video {
+      margin: auto;
+    }
+    .songcenter {
+      margin-bottom: -40px;
+    }
+    .scale__button {
+      scale: 0.8;
+    }
+    .feature:first-of-type {
+      margin-top: 2rem;
+    }
+    .seemore {
+      color: white;
+      font-size: 2.5rem;
+      text-shadow: 2px 2px 4px #444444;
+      text-align: center;
+    }
+
+    .block__header {
+      margin-bottom: 1rem;
+    }
+    .fav__table {
+      font-size: 24px;
+      text-align: center;
+      color: white;
+      text-shadow: 2px 2px 4px #444444;
+      border-radius: 8px;
+      width: 100%;
+    }
+
+    .fav__table tr:nth-child(2) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .table__insert {
+      border: 3px solid rgb(30, 32, 29);
+      flex: 1 1 33%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 2px;
+      background-color: rgb(3, 132, 29);
+    }
+
+    .crests {
+      margin-left: 4px;
+      width: 75px;
+      max-height: 75px;
+      object-fit: contain;
+      justify-content: start;
+    }
+    .crests__nomargin {
+      margin: 0;
+      width: 50px;
+      max-height: 50px;
+      object-fit: scale-down;
+    }
+
+    .position {
+      margin-bottom: 0;
+      margin-right: 5px;
+    }
+
+    th {
+      font-size: 3.5rem;
+    }
+    .movedown {
+      margin-bottom: 0.5rem;
+    }
+
+    .crestsmall {
+      height: 50px;
+      padding: 5px 0;
+    }
+    .crestlarge {
+      height: 75px;
+      margin-left: 10px;
+    }
+  </style>
   <body>
     <nav class="nav collapsible">
       <a href="../index.html"
@@ -29,10 +127,10 @@
           <a href="../index.html">Home</a>
         </li>
         <li class="nav__item">
-          <a href="../Player-Bios/player-bios-index.html">Player Biographies</a>
+          <a href="../Season-2-Driver/S2-index.html">Season 2 Stats & Info</a>
         </li>
         <li class="nav__item">
-          <a href="../Season-2-Driver/S2-index.html">Season 2 Stats & Info</a>
+          <a href="../Season-1-Driver/S1-index.html">Season 1 Stats & Info</a>
         </li>
         <li class="nav__item">
           <a href="../Tournaments/tournaments-index.html">Tournaments</a>
@@ -43,5 +141,268 @@
       </ul>
     </nav>
     <script src="../js/main.js"></script>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">John</h2>
+        <p class="seasons-text">
+          John is a remarkable talent in the world of FIFA, showcasing his
+          exceptional skills as a result of his prowess in video games,
+          particularly as a prolific and famous Super Smash Bros Ultimate
+          player. As the younger twin of Joe, a captivating rivalry is expected
+          to unfold between the two siblings, adding an exciting dynamic to
+          their gameplay. With John's gaming expertise and passion for
+          competition, the FIFA community eagerly awaits his rise as a
+          formidable contender, anticipating thrilling matchups and intense
+          battles on the pitch.
+        </p>
+      </header>
+    </section>
+    <section>
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Top 3 FIFA Songs:</h2>
+      </header>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/6EnBcUZMs1CZz3gkLLHAjg?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/2Iq6HhIquO7JKr0KfTNLzU?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/4Iaj6S75mnpxIM3mUlto8F?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Tournament Performances:</h2>
+      </header>
+      <article class="grid grid--1x2 feature movedown">
+        <div class="feature__content">
+          <h3 class="feature__heading">Chicago Invitational</h3>
+          <div>
+            <p>
+              Despite having limited experience playing FIFA, John made a
+              remarkable entrance into the tournament. As a newcomer, he
+              displayed an impressive performance, narrowly falling short
+              against Ben. In a closely contested match, John lost with a
+              scoreline of 1-0. However, his outstanding performance as a
+              beginner showcased his potential and left a lasting impression on
+              both competitors and spectators.
+            </p>
+          </div>
+          <button class="button2 scale__button">
+            <a class="links" href="../Tournaments/Tournaments-folder/CHINV.html"
+              >Learn More →</a
+            >
+          </button>
+        </div>
+        <picture>
+          <img
+            class="feature__image"
+            src="Player-Bio-Photos/johnchicago.jpeg"
+            alt="Ale-winning-worlc cup"
+          />
+        </picture>
+      </article>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Favorites</h2>
+      </header>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Teams:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Greece
+            <img
+              class="crests"
+              src="../Season-1-Team-Logos/greecelogo.webp"
+              alt="greece Crest"
+            />
+          </td>
+          <td class="table__insert">
+            Australia<img
+              class="crests"
+              src="../Season-1-Team-Logos/australiacrest.webp"
+              alt="australia crest"
+            />
+          </td>
+          <td class="table__insert">
+            New Zeland<img
+              class="crests"
+              src="../Season-1-Team-Logos/newzelandlogo.webp"
+              alt="New Zeland crest"
+            />
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Players:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Ken
+            <img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/ken.webp"
+              alt="pogba"
+            />
+            <p class="position">SSBU</p>
+          </td>
+          <td class="table__insert">
+            Messi<img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/messi.png"
+              alt="messi"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/argentinacrest.png"
+              alt="france Crest"
+            />
+            <p class="position">RW</p>
+          </td>
+          <td class="table__insert">
+            Ronaldo<img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/CR7.png"
+              alt="cr7"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/portugalcrest.png"
+              alt="portugal Crest"
+            />
+            <p class="position">LW</p>
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Clubs (Prem, La Liga, Other):</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Liverpool
+            <img
+              class="crests"
+              src="../Team-Logos/liverpoo.png"
+              alt="liverpool"
+            />
+          </td>
+          <td class="table__insert">
+            FC Barcelona<img
+              class="crests"
+              src="../Team-Logos/FC_Barcelona_(crest).svg.png"
+              alt="FCb crest"
+            />
+          </td>
+          <td class="table__insert">
+            AAA<img
+              class="crestlarge crests"
+              src="../Team-Logos/TheBigHouse3.png"
+              alt="AAA"
+            />
+          </td>
+        </tr>
+      </table>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Other Facts:</h2>
+      </header>
+      <table class="fav__table">
+        <tr>
+          <th colspan="2">Nationality:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Lebanese
+            <img
+              class="crestlarge crests"
+              src="../Player-Bios/Player-Bio-Photos/Flag_of_Lebanon.svg.png"
+              alt="lebanon"
+            />
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="2">Rivals:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Kazyua Mishima
+            <img
+              class="crests"
+              src="../FIFA Player Headshots/kazuya.webp"
+              alt="Kazuya Mishima"
+            />
+          </td>
+          <td class="table__insert">
+            J.T.<img
+              class="crests"
+              src="../Player-Bios/Player-Bio-Photos/Player Headshots/jt.png"
+              alt="Dahmer"
+            />
+          </td>
+          <td class="table__insert">
+            Joe<img
+              class="crests"
+              src="../Player-Bios/Player-Bio-Photos/Player Headshots/Joe-Headshot.png"
+              alt="Joe"
+            />
+          </td>
+        </tr>
+      </table>
+    </section>
+
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Season Stats:</h2>
+      </header>
+      <p class="seemore">
+        To View Player's Stats, See the Season 1 or Season 2 Stats & Info
+        Section:
+      </p>
+      <button class="button2 scale__button">
+        <a class="links" href="../Season-2-Driver/S2-index.html">Season 2 →</a>
+      </button>
+      <button class="button2 scale__button">
+        <a class="links" href="../Season-1-Driver/S1-index.html">Season 1 →</a>
+      </button>
+    </section>
   </body>
 </html>
