--- a/Season-2-Driver/S2-index.html
+++ b/Season-2-Driver/S2-index.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/styles.css" />
-    <title>Tournaments</title>
+    <title>Season 2</title>
   </head>
   <style>
     .Name {
