--- a/Tournaments/Tournaments-folder/WC-R11.html
+++ b/Tournaments/Tournaments-folder/WC-R11.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <iframe
+      src="https://brackethq.com/b/hwdlb/embed/?zoom=0"
+      width="100%"
+      height="550"
+      frameborder="0"
+    ></iframe>
+  </body>
 </html>
