--- a/Player-Bios/JT.html
+++ b/Player-Bios/JT.html
@@ -14,8 +14,106 @@
     />
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/styles.css" />
-    <title>Tournaments</title>
+    <title>Bios | JT</title>
   </head>
+  <style>
+    .bio-header {
+      font-size: 9rem;
+    }
+
+    .crests:last-child {
+      margin-right: 0;
+    }
+
+    .centered-container {
+      /*this is for songs*/
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 0px;
+    }
+    .GOTW__video {
+      margin: auto;
+    }
+    .songcenter {
+      margin-bottom: -40px;
+    }
+    .scale__button {
+      scale: 0.8;
+    }
+    .feature:first-of-type {
+      margin-top: 2rem;
+    }
+    .seemore {
+      color: white;
+      font-size: 2.5rem;
+      text-shadow: 2px 2px 4px #444444;
+      text-align: center;
+    }
+
+    .block__header {
+      margin-bottom: 1rem;
+    }
+    .fav__table {
+      font-size: 24px;
+      text-align: center;
+      color: white;
+      text-shadow: 2px 2px 4px #444444;
+      border-radius: 8px;
+      width: 100%;
+    }
+
+    .fav__table tr:nth-child(2) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .table__insert {
+      border: 3px solid rgb(30, 32, 29);
+      flex: 1 1 33%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 2px;
+      background-color: rgb(3, 132, 29);
+    }
+
+    .crests {
+      margin-left: 4px;
+      width: 75px;
+      max-height: 75px;
+      object-fit: contain;
+      justify-content: start;
+    }
+    .crests__nomargin {
+      margin: 0;
+      width: 50px;
+      max-height: 50px;
+      object-fit: scale-down;
+    }
+
+    .position {
+      margin-bottom: 0;
+      margin-right: 5px;
+    }
+
+    th {
+      font-size: 3.5rem;
+    }
+    .movedown {
+      margin-bottom: 0.5rem;
+    }
+
+    .crestsmall {
+      height: 50px;
+      padding: 5px 0;
+    }
+    .crestlarge {
+      height: 75px;
+      margin-left: 10px;
+    }
+  </style>
   <body>
     <nav class="nav collapsible">
       <a href="../index.html"
@@ -29,10 +127,10 @@
           <a href="../index.html">Home</a>
         </li>
         <li class="nav__item">
-          <a href="../Player-Bios/player-bios-index.html">Player Biographies</a>
+          <a href="../Season-2-Driver/S2-index.html">Season 2 Stats & Info</a>
         </li>
         <li class="nav__item">
-          <a href="../Season-2-Driver/S2-index.html">Season 2 Stats & Info</a>
+          <a href="../Season-1-Driver/S1-index.html">Season 1 Stats & Info</a>
         </li>
         <li class="nav__item">
           <a href="../Tournaments/tournaments-index.html">Tournaments</a>
@@ -43,5 +141,217 @@
       </ul>
     </nav>
     <script src="../js/main.js"></script>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">JT</h2>
+        <p class="seasons-text">
+          JT is a rising star in the FIFA scene, bringing an unconventional and
+          tactically defensive approach to the game. As a newcomer, JT utilizes
+          unorthodox defense mechanics that consistently hold even the strongest
+          opponents to minimal goals. With a knack for reading the game and
+          anticipating opponents' moves, JT's ingenious defensive strategies
+          leave adversaries puzzled and frustrated. Their unique style and
+          unwavering commitment to perfecting their skills make JT a formidable
+          force, poised to make a lasting impact in the world of FIFA.
+        </p>
+      </header>
+    </section>
+    <section>
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Top 3 FIFA Songs:</h2>
+      </header>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/0oerlffJSzhRVvtDfLcp3N?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Tournament Performances:</h2>
+      </header>
+      <article class="grid grid--1x2 feature movedown">
+        <div class="feature__content">
+          <h3 class="feature__heading">Chicago Invitational</h3>
+          <div>
+            <p>
+              Despite having limited experience playing FIFA, JT made a
+              remarkable entrance into the tournament. As a newcomer, he
+              displayed an impressive performance, narrowly falling short
+              against the season 1 veteran, Joe. In a closely contested match,
+              JT lost with a scoreline of 1-0. However, his outstanding
+              performance as a beginner showcased his potential and left a
+              lasting impression on both competitors and spectators. Many other
+              league members noted that his unique style of defense could cause
+              a change in the league's meta if JT can perfect it.
+            </p>
+          </div>
+          <button class="button2 scale__button">
+            <a class="links" href="../Tournaments/Tournaments-folder/CHINV.html"
+              >Learn More →</a
+            >
+          </button>
+        </div>
+        <picture>
+          <img
+            class="feature__image"
+            src="Player-Bio-Photos/jtchi.webp"
+            alt="Ale-winning-worlc cup"
+          />
+        </picture>
+      </article>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Favorites</h2>
+      </header>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Teams:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Netherlands
+            <img
+              class="crests"
+              src="../Season-1-Team-Logos/Netherlandscrest.png"
+              alt="greece Crest"
+            />
+          </td>
+          <td class="table__insert">
+            Romania
+            <img
+              class="crests"
+              src="../Season-1-Team-Logos/romaniacrest.webp"
+              alt="greece Crest"
+            />
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Players:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Messi<img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/messi.png"
+              alt="messi"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/argentinacrest.png"
+              alt="france Crest"
+            />
+            <p class="position">RW</p>
+          </td>
+          <td class="table__insert">
+            Ronaldo<img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/CR7.png"
+              alt="cr7"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/portugalcrest.png"
+              alt="portugal Crest"
+            />
+            <p class="position">LW</p>
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Clubs (Prem, La Liga, Other):</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Southampton
+            <img
+              class="crests"
+              src="../Team-Logos/FC_Southampton.svg.webp"
+              alt="liverpool"
+            />
+          </td>
+          <td class="table__insert">
+            <p>PMATWWIRBAFYB</p>
+          </td>
+        </tr>
+      </table>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Other Facts:</h2>
+      </header>
+      <table class="fav__table">
+        <tr>
+          <th colspan="2">Nationality:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Trinidad and Tobago(an)
+            <img
+              class="crestlarge crests"
+              src="../Player-Bios/Player-Bio-Photos/TAT.webp"
+              alt="lebanon"
+            />
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="2">Rivals:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Alejandro
+            <img
+              class="crests"
+              src="../Player-Bios/Player-Bio-Photos/Player Headshots/Alej-Headshot.png"
+              alt="Kazuya Mishima"
+            />
+          </td>
+          <td class="table__insert">
+            Michael<img
+              class="crests"
+              src="../Player-Bios/Player-Bio-Photos/Player Headshots/Michael-Headshot.png"
+              alt="Dahmer"
+            />
+          </td>
+          <td class="table__insert">
+            Joe<img
+              class="crests"
+              src="../Player-Bios/Player-Bio-Photos/Player Headshots/Joe-Headshot.png"
+              alt="Joe"
+            />
+          </td>
+        </tr>
+      </table>
+    </section>
+
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Season Stats:</h2>
+      </header>
+      <p class="seemore">
+        To View Player's Stats, See the Season 1 or Season 2 Stats & Info
+        Section:
+      </p>
+      <button class="button2 scale__button">
+        <a class="links" href="../Season-2-Driver/S2-index.html">Season 2 →</a>
+      </button>
+      <button class="button2 scale__button">
+        <a class="links" href="../Season-1-Driver/S1-index.html">Season 1 →</a>
+      </button>
+    </section>
   </body>
 </html>
