--- a/Player-Bios/Joe.html
+++ b/Player-Bios/Joe.html
@@ -14,8 +14,102 @@
     />
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/styles.css" />
-    <title>Tournaments</title>
+    <title>Bios | Joe</title>
   </head>
+  <style>
+    .bio-header {
+      font-size: 9rem;
+    }
+
+    .crests:last-child {
+      margin-right: 0;
+    }
+
+    .centered-container {
+      /*this is for songs*/
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 0px;
+    }
+    .GOTW__video {
+      margin: auto;
+    }
+    .songcenter {
+      margin-bottom: -40px;
+    }
+    .scale__button {
+      scale: 0.8;
+    }
+    .feature:first-of-type {
+      margin-top: 2rem;
+    }
+    .seemore {
+      color: white;
+      font-size: 2.5rem;
+      text-shadow: 2px 2px 4px #444444;
+      text-align: center;
+    }
+
+    .block__header {
+      margin-bottom: 1rem;
+    }
+    .fav__table {
+      font-size: 24px;
+      text-align: center;
+      color: white;
+      text-shadow: 2px 2px 4px #444444;
+      border-radius: 8px;
+      width: 100%;
+    }
+
+    .fav__table tr:nth-child(2) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .table__insert {
+      border: 3px solid rgb(30, 32, 29);
+      flex: 1 1 33%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 2px;
+      background-color: rgb(3, 132, 29);
+    }
+
+    .crests {
+      margin-left: 4px;
+      width: 75px;
+      max-height: 75px;
+      object-fit: contain;
+      justify-content: start;
+    }
+    .crests__nomargin {
+      margin: 0;
+      width: 50px;
+      max-height: 50px;
+      object-fit: scale-down;
+    }
+
+    .position {
+      margin-bottom: 0;
+      margin-right: 5px;
+    }
+
+    th {
+      font-size: 3.5rem;
+    }
+    .movedown {
+      margin-bottom: 0.5rem;
+    }
+
+    .crestsmall {
+      height: 50px;
+      padding: 5px 0;
+    }
+  </style>
   <body>
     <nav class="nav collapsible">
       <a href="../index.html"
@@ -29,10 +123,10 @@
           <a href="../index.html">Home</a>
         </li>
         <li class="nav__item">
-          <a href="../Player-Bios/player-bios-index.html">Player Biographies</a>
+          <a href="../Season-2-Driver/S2-index.html">Season 2 Stats & Info</a>
         </li>
         <li class="nav__item">
-          <a href="../Season-2-Driver/S2-index.html">Season 2 Stats & Info</a>
+          <a href="../Season-1-Driver/S1-index.html">Season 1 Stats & Info</a>
         </li>
         <li class="nav__item">
           <a href="../Tournaments/tournaments-index.html">Tournaments</a>
@@ -43,5 +137,371 @@
       </ul>
     </nav>
     <script src="../js/main.js"></script>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Joe</h2>
+        <p class="seasons-text">
+          With his flashy scoring abilities and relentless aggression, Joe is a
+          force to be reckoned with on the virtual pitch. Joe's FIFA reign is a
+          captivating mix of hot and cold performances, but when he's on fire,
+          he produces some of the most electric clips you'll ever witness. His
+          daring style of play keeps viewers on the edge of their seats, as he
+          fearlessly takes on opponents and showcases his unparalleled skills.
+          Get ready to be dazzled by Joe's exhilarating gameplay and the
+          jaw-dropping moments he creates in every match.
+        </p>
+      </header>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Awards</h2>
+        <p class="seasons-text">Joe is the holder of the Golden Glove Award</p>
+        <p class="seasons-text seasons-text-end">
+          Joe was the recipient of the 1<sup>st</sup>, 2<sup>nd</sup>, and 4<sup
+            >th</sup
+          >
+          Goal of the Week Trophies
+        </p>
+      </header>
+      <article class="feature grid grid--1x2">
+        <img
+          class="feature__image"
+          src="Player-Bio-Photos/GOTW1.webp"
+          alt="Ale Winning GOTW #3"
+        />
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/Ulm4PiFmCDA"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <img
+          class="feature__image"
+          src="Player-Bio-Photos/GOTW2.webp"
+          alt="Ale Winning GOTW #5"
+        />
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/gP86-Uggbrw"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <img
+          class="feature__image"
+          src="Player-Bio-Photos/GOTW4.webp"
+          alt="Ale Winning GOTW #6"
+        />
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/Sm98OeISXHI"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </article>
+    </section>
+    <section>
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Top 3 FIFA Songs:</h2>
+      </header>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/5TloYFwzd09yWy8xkRLVUu?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/1EymydSgZSlLuVQcdiNohO?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/264py48l3YjixQ3OhlGutW?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Tournament Performances:</h2>
+      </header>
+      <article class="grid grid--1x2 feature movedown">
+        <div class="feature__content">
+          <h3 class="feature__heading">1<sup>st</sup> annual World Cup</h3>
+          <div>
+            <p>
+              Joe came into the tournament on a 5 game losing streak leading up
+              to the match against his rival: Michael
+            </p>
+            <p>
+              He ended up winning an offensive showcase from both players, with
+              the game totaling 22 shots.
+            </p>
+            <p>
+              He then went on to lose his next two games to the eventual
+              runner-up Gabe, and Karsin in the loser's semi-finals.
+            </p>
+          </div>
+          <button class="button2 scale__button">
+            <a
+              class="links"
+              href="../Tournaments/Tournaments-folder/WC-R11.html"
+              >Learn More →</a
+            >
+          </button>
+        </div>
+        <picture>
+          <img
+            class="feature__image"
+            src="Player-Bio-Photos/joewc.webp"
+            alt="Ale-winning-worlc cup"
+          />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature movedown">
+        <div class="feature__content">
+          <h3 class="feature__heading">Chicago Invitational</h3>
+          <div>
+            <p>
+              With no access to an Xbox over the summer, Joe came into the
+              tournament facing his toughest battle yet, as his two rivals,
+              Michael and Alejandro, had been practicing all summer. He would
+              narrowly escape his first game against JT, winning 1 - 0. His next
+              game would prove difficult, as Michael was out for revenge after a
+              defeat to Joe in the World Cup that saw Michael score 0 goals on
+              16 shots. This time, Michael capitalized on his opportunities,
+              smashing 3 goals past Joe's defense. It also didn't help that Joe
+              picked up 2 Red Cards, but he did score 2 penalties. The final
+              scoreline of 3 - 2 put the league on notice, and this rivalry is
+              only getting more intense.
+            </p>
+          </div>
+
+          <button class="button2 scale__button">
+            <a class="links" href="../Tournaments/Tournaments-folder/CHINV.html"
+              >Learn More →</a
+            >
+          </button>
+        </div>
+        <picture>
+          <img
+            class="feature__image"
+            src="Player-Bio-Photos/joeCHIINV.webp"
+            alt="Ale-winning-worlc cup"
+          />
+        </picture>
+      </article>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Favorites</h2>
+      </header>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Teams:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Uruguay
+            <img
+              class="crests"
+              src="../Season-1-Team-Logos/uruguaycrest.webp"
+              alt="uruguay Crest"
+            />
+          </td>
+          <td class="table__insert">
+            Belgium<img
+              class="crests"
+              src="../Season-1-Team-Logos/belgiumcrest.png"
+              alt="Portual crest"
+            />
+          </td>
+          <td class="table__insert">
+            Portual<img
+              class="crests"
+              src="../Season-1-Team-Logos/portugalcrest.png"
+              alt="portugal crest"
+            />
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Players:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Hazard
+            <img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/Hazard.png"
+              alt="Hazard"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/belgiumcrest.png"
+              alt="Belgium Crest"
+            />
+            <p class="position">LW</p>
+          </td>
+          <td class="table__insert">
+            Lukaku<img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/Lukaku.png"
+              alt="Lukaku"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/belgiumcrest.png"
+              alt="Belgium Crest"
+            />
+            <p class="position">ST</p>
+          </td>
+          <td class="table__insert">
+            Messi<img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/messi.png"
+              alt="messi"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/argentinacrest.png"
+              alt="argentina Crest"
+            />
+            <p class="position">RW</p>
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Clubs (Prem, La Liga, Other):</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Chelsea
+            <img
+              class="crests"
+              src="../Team-Logos/Chelsea_FC.svg.webp"
+              alt="MCFC"
+            />
+          </td>
+          <td class="table__insert">
+            Tottenham<img
+              class="crests"
+              src="../Team-Logos/Tottenham_Hotspur.svg.webp"
+              alt="Real Madrid crest"
+            />
+          </td>
+          <td class="table__insert">
+            Barcelona<img
+              class="crests"
+              src="../Team-Logos/FC_Barcelona_(crest).svg.png"
+              alt="FCB logo"
+            />
+          </td>
+        </tr>
+      </table>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Other Facts:</h2>
+      </header>
+      <table class="fav__table">
+        <tr>
+          <th colspan="2">Nationality:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Lebanese
+            <img
+              class="crestsmall crests"
+              src="../Player-Bios/Player-Bio-Photos/Flag_of_Lebanon.svg.png"
+              alt="Mexico"
+            />
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="2">Rivals:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Kompany
+            <img
+              class="crests"
+              src="../FIFA Player Headshots/kompany.png"
+              alt="MCFC"
+            />
+            <img
+              class="crests"
+              src="../Season-1-Team-Logos/belgiumcrest.png"
+              alt="MCFC"
+            />
+          </td>
+          <td class="table__insert">
+            Michael<img
+              class="crests"
+              src="../Player-Bios/Player-Bio-Photos/Player Headshots/Michael-Headshot.png"
+              alt="Real Madrid crest"
+            />
+          </td>
+          <td class="table__insert">
+            Patty - need a photo<img class="crests" src="" alt="patyy" />
+          </td>
+        </tr>
+      </table>
+    </section>
+
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Season Stats:</h2>
+      </header>
+      <p class="seemore">
+        To View Player's Stats, See the Season 1 or Season 2 Stats & Info
+        Section:
+      </p>
+      <button class="button2 scale__button">
+        <a class="links" href="../Season-2-Driver/S2-index.html">Season 2 →</a>
+      </button>
+      <button class="button2 scale__button">
+        <a class="links" href="../Season-1-Driver/S1-index.html">Season 1 →</a>
+      </button>
+    </section>
   </body>
 </html>
